--- a/Server/Models/Models.csproj
+++ b/Server/Models/Models.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Catel.Core">
+      <HintPath>..\..\packages\Catel.Core.3.6\lib\NET45\Catel.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Catel.Extensions.EntityFramework5">
+      <HintPath>..\..\packages\Catel.Extensions.EntityFramework5.3.6\lib\NET45\Catel.Extensions.EntityFramework5.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
