--- a/Server/Models/packages.config
+++ b/Server/Models/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Catel.Core" version="3.6" targetFramework="net451" />
+  <package id="Catel.Extensions.EntityFramework5" version="3.6" targetFramework="net451" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
 </packages>
