--- a/Site/Website/Website.csproj
+++ b/Site/Website/Website.csproj
@@ -39,6 +39,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Catel.Core">
+      <HintPath>..\..\packages\Catel.Core.3.6\lib\NET45\Catel.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Catel.Extensions.EntityFramework5">
+      <HintPath>..\..\packages\Catel.Extensions.EntityFramework5.3.6\lib\NET45\Catel.Extensions.EntityFramework5.dll</HintPath>
+    </Reference>
+    <Reference Include="Catel.Mvc">
+      <HintPath>..\..\packages\Catel.Mvc.3.6\lib\NET45\Catel.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
