--- a/Site/Website/packages.config
+++ b/Site/Website/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Catel.Core" version="3.6" targetFramework="net451" />
+  <package id="Catel.Extensions.EntityFramework5" version="3.6" targetFramework="net451" />
+  <package id="Catel.Mvc" version="3.6" targetFramework="net451" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net451" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net451" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net451" />
