Almost finished too tired now to continue

--- a/Server/Contracts/Contracts.csproj
+++ b/Server/Contracts/Contracts.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBugzbgoneUoW.cs" />
     <Compile Include="IDates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
