--- a/Site/Website/packages.config
+++ b/Site/Website/packages.config
@@ -10,7 +10,7 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net451" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net451" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
-  <package id="jQuery" version="1.8.2" targetFramework="net451" />
+  <package id="jQuery" version="1.9.1" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net451" />
@@ -36,5 +36,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net451" />
+  <package id="T4MVCExtensions" version="3.6.5" targetFramework="net451" />
+  <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="TwitterBootstrapMVC" version="2.6.3" targetFramework="net451" />
   <package id="WebGrease" version="1.3.0" targetFramework="net451" />
 </packages>
