added a quick viewbug view

--- a/Site/Website/Website.csproj
+++ b/Site/Website/Website.csproj
@@ -337,6 +337,7 @@
     <Content Include="Views\Bug\CreateTeamMember.cshtml" />
     <Content Include="Views\Bug\CreateProject.cshtml" />
     <Content Include="Views\Bug\CreateNewBug.cshtml" />
+    <Content Include="Views\Bug\ViewBug.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
